# whiscribe

./: README.md  pyproject.toml
.streamlit/: config.toml
tests/: test_srt.py
whiscribe/: app.py  audio.py  cli.py  srt.py  transcriber.py
